[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Sprites/presents/Present-Closed.png" type="Texture" id=1]
[ext_resource path="res://collectibles/Cherry/Cherry.gd" type="Script" id=2]
[ext_resource path="res://assets/Sound/44.1 General Library (Samples)/Biting_Crunchy_Single_Close_01.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Cherry" type="Node2D"]
script = ExtResource( 2 )
spriteHoverLimit = 4
spriteHoverSpeed = 0.2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="CollectSFX" to="." method="_on_CollectSFX_finished"]
